[tool.poetry]
name = "repl_python3_test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
decode = "^0.5.9"
bs4 = "^0.0.1"
beautifulsoup4 = "^4.10.0"
lxml = "^4.6.3"
parse = "^1.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
